on the way to making this a geekout with different difficulties, added some more namespacing and fixed some bugs

--- a/css/memory.css
+++ b/css/memory.css
@@ -2,6 +2,56 @@ body {
     margin: 0;
 }
 
+#modal-wrapper {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 12345;
+}
+
+#modal-wrapper .modal {
+    background-color: white;
+    min-width: 200px;
+    min-height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    padding: 40px;
+    border-radius: 5px;
+    text-align: center;
+    font-family: 'Muli', sans-serif;
+}
+
+#modal-wrapper .close-btn {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    color: black;
+}
+
+#modal-wrapper .modal-title {
+    font-size: 40px;
+    color: red;
+}
+
+#new-game {
+    color: red;
+    background-color: yellow;
+    height: 5vh;
+    width: 100%;
+    font-size: 30px;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
 .container {
     height: 100vh;
     width: 100vw;
@@ -24,7 +74,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .back {
